--- a/web/player.html
+++ b/web/player.html
@@ -14,6 +14,7 @@
 <div style="padding: 40px;">
 
 <a href="#" onclick="open_player()">asdf</a><br />
+<a href="image.png">image</a><br />
 <img src="image.png" />
 </div>
 
