--- a/web/player.html
+++ b/web/player.html
@@ -3,19 +3,76 @@
 <head>
 <title>Player</title>
 <script src="jquery.js"></script>
-<script src="zlib.js"></script>
-<script src="png.js"></script>
-<script src="SoundPlayer.js"></script>
-<script src="4cs.user.js"></script>
 </head>
 <body>
 
 
 <div style="padding: 40px;">
 
-<a href="#" onclick="open_player()">asdf</a><br />
-<a href="image.png">image</a><br />
-<img src="image.png" />
+
+
+<!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+<div id="player"></div>
+
+<script>
+// 2. This code loads the IFrame Player API code asynchronously.
+var tag = document.createElement('script');
+tag.src = "http:" + "//www.youtube.com/iframe_api";
+var firstScriptTag = document.getElementsByTagName('script')[0];
+firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+
+// 3. This function creates an <iframe> (and YouTube player)
+//		after the API code downloads.
+var player;
+function onYouTubeIframeAPIReady() {
+	var playerVars = {
+		controls: 0,
+		showinfo: 0,
+		modestbranding: 1,
+		wmode: "opaque",
+		html5: 1,
+		disablekb: 1,
+		enablejsapi: 1,
+		rel: 0,
+		showinfo: 0,
+		origin: window.location.href.toString()
+	};
+
+player = new YT.Player('player', {
+	height: '390',
+	width: '640',
+	videoId: 'u1zgFlCw8Aw',
+	events: {
+	'onReady': onPlayerReady,
+	'onStateChange': onPlayerStateChange,
+	}
+});
+}
+
+// 4. The API will call this function when the video player is ready.
+function onPlayerReady(event) {
+event.target.playVideo();
+}
+
+// 5. The API calls this function when the player's state changes.
+//		The function indicates that when playing a video (state=1),
+//		the player should play for six seconds and then stop.
+var done = false;
+function onPlayerStateChange(event) {
+if (event.data == YT.PlayerState.PLAYING && !done) {
+	setTimeout(stopVideo, 6000);
+	done = true;
+}
+}
+function stopVideo() {
+player.stopVideo();
+}
+</script>
+
+
+
+
 </div>
 
 
