--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="TitleContainer0">
-	<div class="TitleContainer1"><div class="Title">4cs</div><div class="AuthorContainer"><a class="AuthorLink" href="https://github.com/dnsev">dnsev</a></div>
+	<div class="TitleContainer1"><a class="Title" href="">4cs</a><div class="AuthorContainer"><a class="AuthorLink" href="https://github.com/dnsev">dnsev</a></div>
 	</div><div class="SubTitleSeparator">/</div><div class="SubTitleContainer"><div class="SubTitle">4chan Media Player</div>
 	<div class="SubTitleDescription"><a class="NavigationLink NavigationLinkCurrent" id="navigation_install" href="#">install</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_about" href="https://github.com/dnsev/4cs/wiki">about</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_issues" href="https://github.com/dnsev/4cs/issues">issues</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_source" href="https://github.com/dnsev/4cs">source</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_wiki" href="https://github.com/dnsev/4cs/wiki">wiki</a></div>
 	</div>
