--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="style.css" />
 	<title>dnsev / 4cs</title>
 	<script src="jquery.js"></script>
+	<script src="https://raw.github.com/dnsev/4cs/master/web/changelog.js"></script>
 	<script src="script.js"></script>
 </head>
 <body>
