--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 		</div>
 
 		<div class="ExtrasContainer">
-			<div class="Extra">
-				<a class="NonDeveloper DeveloperDisplayOff" href="#" id="developer_change">For developers</a>
-			</div><div class="Extra">
-				<a class="SpecificBrowser BrowserDisplayOff" href="#" id="show_all_browser">Browser not shown</a>
-			</div><div class="Extra">
-				<a class="NoHelp HelpDisplayOff" href="#" id="help_change">Not working?</a>
+			<div class="Extra NonDeveloper DeveloperDisplayOff">
+				<a href="#" id="developer_change">For developers</a>
+			</div><div class="Extra SpecificBrowser BrowserDisplayOff">
+				<a href="#" id="show_all_browser">Browser not shown</a>
+			</div><div class="Extra NoHelp HelpDisplayOff">
+				<a href="#" id="help_change">Not working?</a>
 			</div>
 		</div>
 	</div>
