--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="TitleBorder"></div>
 <div class="ContentContainer">
-	<div class="Content ContentActive" id="content_install">
+	<div class="Content ContentWidth ContentActive" id="content_install">
 		<div class="FeaturesContainer">
 			<div class="Feature">
 				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=sounds"><div class="TextIcon TextIconAudio"></div><span class="TextIconText FeatureText">Sound playback</span></a>
@@ -94,6 +94,7 @@
 			</ul>
 		</div>
 
+		<div class="ExtrasContainerPre"></div>
 		<div class="ExtrasContainer">
 			<div class="Extra NonDeveloper DeveloperDisplayOff">
 				<a href="#" id="developer_change">For developers</a>
@@ -104,13 +105,13 @@
 			</div>
 		</div>
 	</div>
-	<div class="Content" id="content_changes">
+	<div class="Content ContentWidth" id="content_changes">
 		<div class="ContentHeader"><span class="ContentHeaderTitle">Change log</span>:</div>
 		<div class="ContentBody" id="change_log" style="display: none;">
 			Change log could not be loaded.
 		</div>
 	</div>
-	<div class="Content" id="content_issues">
+	<div class="Content ContentWidth" id="content_issues">
 		<div class="ContentHeader"><span class="ContentHeaderTitle">Issues</span>:</div>
 		<div class="ContentBody">
 			<p>Issues can be tracked on <a href="https://github.com/dnsev/4cs/issues" target="_blank">this page</a>.</p>
@@ -118,19 +119,19 @@
 			<p>Try to include information about the problem such as browser, userscript plugin (Greasemonkey, Scriptish, Tampermonkey, etc.), any other userscripts installed which may be conflicting, and a description of the problem.</p>
 		</div>
 	</div>
-	<div class="Content" id="content_source">
+	<div class="Content ContentWidth" id="content_source">
 		<div class="ContentHeader"><span class="ContentHeaderTitle">Source</span>:</div>
 		<div class="ContentBody">
 			<p>Source code is available on <a href="https://github.com/dnsev/4cs" target="_blank">Github</a>.</p>
 		</div>
 	</div>
-	<div class="Content" id="content_wiki">
+	<div class="Content ContentWidth" id="content_wiki">
 		<div class="ContentHeader"><span class="ContentHeaderTitle">Wiki</span>:</div>
 		<div class="ContentBody">
 			<p>Additional project information can be viewed in <a href="https://github.com/dnsev/4cs/wiki" target="_blank">the wiki</a>.</p>
 		</div>
 	</div>
-	<div class="Content" id="content_about">
+	<div class="Content ContentWidth" id="content_about">
 		<div class="ContentHeader"><span class="ContentHeaderTitle">About</span>:</div>
 		<div class="ContentBody">
 			<p>The userscript is designed primarily to be an extension to 4chan's image boards, but is designed with modularity in mind.</p>
@@ -146,7 +147,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="Content" id="content_about_userscript">
+	<div class="Content ContentWidth" id="content_about_userscript">
 		<div class="ContentHeader" multi_id="userscript"><a href="#about" class="InternalLink ContentHeaderTitle">About</a> / <span class="HoverShowControl"><span class="ContentHeaderTitle">Userscript</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=userscript">Hardlink</a></span></span></div>
 		<div class="ContentBody">
 			<p>The userscript is designed as a plugin to be used on 4chan's image boards, as well as the Foolz archive.</p>
@@ -229,7 +230,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="Content" id="content_about_development">
+	<div class="Content ContentWidth" id="content_about_development">
 		<div class="ContentHeader" multi_id="development"><a href="#about" class="InternalLink ContentHeaderTitle">About</a> / <span class="HoverShowControl"><span class="ContentHeaderTitle">Development</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=development">Hardlink</a></span></span></div>
 		<div class="ContentBody">
 			<p>The origin of the name "4cs" comes from the abbreviation of <b>4c</b>han <b>s</b>ounds, but since its conception, it has moved on to be more than just a sound player. As it stands now, "4cs" is just a fun way of spelling "forks".</p>
@@ -323,7 +324,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="Content" id="content_about_codecs">
+	<div class="Content ContentWidth" id="content_about_codecs">
 		<div class="ContentHeader"><a href="#about" class="InternalLink ContentHeaderTitle">About</a> / <span class="ContentHeaderTitle">Image encoders/decoders</span>:</div>
 		<div class="ContentBody">
 			<p>There are 4 applications related to encoding and decoding images. Click on the <a>*.exe</a> links to learn how to use them:</p>
@@ -335,7 +336,7 @@
 			</ul>
 		</div>
 	</div>
-	<div class="Content" id="content_about_codecs_embed_exe">
+	<div class="Content ContentWidth" id="content_about_codecs_embed_exe">
 		<div class="ContentHeader"><a href="#about" class="InternalLink ContentHeaderTitle">About</a> / <a href="#about/codecs" class="InternalLink ContentHeaderTitle">Image encoders/decoders</a> / <span class="ContentHeaderTitle">embed.exe</span>:</div>
 		<div class="ContentBody">
 			<p><a href="https://github.com/dnsev/4cs/raw/master/cpp/embed.exe">embed.exe</a> is an application designed to efficiently embed files inside of images.</p>
@@ -383,7 +384,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="Content" id="content_about_codecs_extract_exe">
+	<div class="Content ContentWidth" id="content_about_codecs_extract_exe">
 		<div class="ContentHeader"><a href="#about" class="InternalLink ContentHeaderTitle">About</a> / <a href="#about/codecs" class="InternalLink ContentHeaderTitle">Image codecs</a> / <span class="ContentHeaderTitle">extract.exe</span>:</div>
 		<div class="ContentBody">
 			<p><a href="https://github.com/dnsev/4cs/raw/master/cpp/extract.exe">extract.exe</a> is an application designed extract files hidden in steganographic images created by embed.exe.</p>
@@ -414,7 +415,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="Content" id="content_about_codecs_batch___exe">
+	<div class="Content ContentWidth" id="content_about_codecs_batch___exe">
 		<div class="ContentHeader"><a href="#about" class="InternalLink ContentHeaderTitle">About</a> / <a href="#about/codecs" class="InternalLink ContentHeaderTitle">Image encoders/decoders</a> / <span class="ContentHeaderTitle">batch-*.exe</span>:</div>
 		<div class="ContentBody">
 			<p><a href="https://github.com/dnsev/4cs/raw/master/batch/batch-decode.exe">batch-decode.exe</a> and <a href="https://github.com/dnsev/4cs/raw/master/batch/batch-re-encode.exe">batch-re-encode.exe</a> are two applications used to extract from older (non-steganographic) image file formats.</p>
@@ -439,7 +440,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="Content" id="content_about_acknowledgements">
+	<div class="Content ContentWidth" id="content_about_acknowledgements">
 		<div class="ContentHeader"><a href="#about" class="InternalLink ContentHeaderTitle">About</a> / <span class="ContentHeaderTitle">Acknowledgements</span>:</div>
 		<div class="ContentBody">
 			<p><a href="http://userscripts.org/users/481445" target="_blank">cornarxgm</a>: for concurrently working on his version, some general collaboration, and <a href="https://userscripts.org/users/481445/scripts" target="_blank">other</a> <a href="http://cornarx.6te.net/" target="_blank">related</a> <a href="http://cornarx.6te.net/mask.html" target="_blank">works</a>.</p>
@@ -454,6 +455,7 @@
 <div class="ImagePreviewOverlayInner">
 </div>
 </div>
+
 
 </body>
 </html>
