--- a/index.html
+++ b/index.html
@@ -182,6 +182,14 @@
 					<li>You can also click and drag video URLs onto the player</li>
 				</ul>
 			</div>
+			<div class="ContentHeader" multi_id="video_previews"><span class="HoverShowControl"><span class="ContentHeaderTitle">Video Previews</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=video_previews">Hardlink</a></span></span></div>
+			<div class="ContentBody">
+				<ul>
+					<li>Preview screenshots of videos can be viewed by hovering the link</li>
+					<li>This feature can be enabled/disabled in the player's settings page</li>
+					<li>Additionally, the size and hover time can be modified</li>
+				</ul>
+			</div>
 			<div class="ContentHeader" multi_id="preview_images"><span class="HoverShowControl"><span class="ContentHeaderTitle">Preview Images</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=preview_images">Hardlink</a></span></span></div>
 			<div class="ContentBody">
 				<ul>
